--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,43 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none; 
 
 }
 
+/* Locales*/
+
+.map-container {
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: space-around;
+    list-style-type: none;
+
+
+}
+
+.map-image {
+
+    overflow:hidden;
+    padding-bottom:330px;
+    position:relative;
+    height:0;
+    border: 1px solid #2e3741 ;
+
+}
+
+.description {
+    margin: 0;
+    padding:20px 0;
+    text-align: left;
+    
+}
+
+
+
+
+
+/* Footer */
 
 
 .containerfooter {
@@ -51,6 +85,7 @@
 
 
 .footer-links ul li a {
+    
     font-size: 15px;
     text-decoration: none;
     color:#BBBBBB;
@@ -88,7 +123,39 @@
     background-color: #00C3FF;
 }
 
+
+
+
+
+/* MediaQuerys*/
+
+
 @media(max-width: 990px) {
+
+
+    .map-container {
+         
+
+
+        align-items: center;
+    }
+
+    .map-image {
+
+        
+        width:250px;
+        height: 250px ;
+        overflow:hidden;
+        padding-bottom:150px;
+    
+        border: 1px solid #2e3741 ;
+
+
+    } 
+
+
+
+
     .footer-row {
 
         text-align: center;
