--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
     list-style: none; 
 
+}
+
+
+/*Politicas de privacidad*/
+
+.privacy {
+    margin: 30px;
+    padding: 30px;
 }
 
 /* Locales*/
@@ -19,6 +27,8 @@
 
 .map-image {
 
+    width: 400px;
+    height: 350px;
     overflow:hidden;
     padding-bottom:330px;
     position:relative;
@@ -35,7 +45,29 @@
 }
 
 
+/*AYUDA*/
 
+
+
+.help-container{
+    
+   
+        margin: 30px;
+        padding: 30px;   
+}
+
+a[href^="#"] {
+    color: black; /* Cambia el color del texto a negro */
+    text-decoration: none; /* Elimina el subrayado */
+    font-weight:bolder;
+    font-size: larger;
+}
+
+
+a[href^="#"]:hover {
+    color: #00C3FF; 
+    
+}
 
 
 /* Footer */
@@ -43,8 +75,7 @@
 
 .containerfooter {
 
-
-   max-width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 
 }
@@ -71,21 +102,22 @@
 
     width: 25%;
     padding: 0 15px;
+  
+    
 }
 
 .footer-links h4 {
      
-    text-align: center;
     font-size: 14 px;
     color: #FFFFFF;
     margin-bottom: 25px;
+    text-decoration: underline #00C3FF;
     font-weight: 500; 
-    border-bottom: 2px solid #00c3ff ;
     display: inline-block;
 }
 
 
-.footer-links ul li a {
+.footer-links p a {
     
     font-size: 15px;
     text-decoration: none;
@@ -97,7 +129,7 @@
 }
 
 
-.footer-links ul li a:hover {
+.footer-links p a:hover {
     color: #00c3ff;
     padding-left: 6px; 
 
@@ -146,12 +178,10 @@
         height: 250px ;
         overflow:hidden;
         padding-bottom:150px;
-    
         border: 1px solid #2e3741 ;
 
 
     } 
-
 
 
 
@@ -168,6 +198,15 @@
         margin-bottom: 30px;
 
     } 
-        
-    }
+    
+}
 
+
+/*
+<select name="lista" id="">
+            <option>Hombre </option>
+            <option>Mujer</option>
+            <option>No-binario</option>
+        </select>
+
+        */
