--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 /*Politicas de privacidad*/
 
 .privacy {
-    margin: 30px;
+    margin: 0 30px;
     padding: 30px;
 }
 
@@ -52,7 +52,7 @@
 .help-container{
     
    
-        margin: 30px;
+        margin: 0 30px;
         padding: 30px;   
 }
 
